# application-hub-context

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  Taskfile.yaml  build.yml  custom-config.yml  demo-eoepca-values.yaml  demo-values.yaml  index.html  mkdocs.yml  release.yaml  requirements.in  requirements.txt  setup.cfg  setup.py  sitemap.xml  skaffold.yaml  validate_config.py
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
.github/workflows/: .github-ci.yaml  build-image.yml  build_publish.yml  docs.yml  package.yaml
apphub-configurator/: README.md  pyproject.toml
apphub-configurator/config-maps/: bash-login  bash-rc  init-stac.sh  init.sh
apphub-configurator/examples/: config-generator.ipynb  generate-config.sh  generate_config.py
apphub-configurator/manifests/: dask-gateway.yaml  kaniko.yaml  manifest.yaml
apphub-configurator/src/apphub_configurator/: __about__.py  models.py
application_hub_context/: app_hub_context.py  models.py  parser.py
config-generator/: README.md  config-generator-eoepca-demo.ipynb  config-generator.ipynb  generate_config.py  index.html  models.py  pyproject.toml  requirements.txt
config-generator/apphub-configurator/: README.md  pyproject.toml
config-generator/config-maps/: bash-rc  conda-rc.yml  init-qgis.sh
config-generator/examples/: config-generator-eoepca-demo.ipynb  config-generator.ipynb  generate-config.sh  generate_config.py
config-generator/manifests/: kaniko.yaml  manifest.yaml
configuration/: index.html
docs/: README.md  app-hub-configurator.md  apphub-config-general.md  configuration.md  hands-on.md  index.md  jupyterhub-api.md  k8s.md
docs/examples/: generate-config.sh  generate_config.py
eoepca-demo/: config.yml
files/hub/: config.yml  jupyterhub_config.py
files/theme/: page.html  spawn.html  spawn_pending.html
hands-on/: index.html
jupyterhub/: values-minikube.yaml  values.schema.json
jupyterhub-api/: index.html
k8s/: index.html
schemas/: config.schema.yaml
search/: search_index.json
sk-k8s/: job.yaml  script.yaml
tests/: tests_interface.py  tests_k8s.py  tests_parser.py
tests/data/: config.yml
(+11 files in other folders)
